--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="fixed-top">
   <nav class="navbar navbar-light bg-faded">
     <div class="container">
-      <a href="#" class="navbar-brand">
+      <a [routerLink]="['/']" class="navbar-brand">
         <img src="/assets/logo.png" />
       </a>
       <a a href="#"><img src="/assets/carrinho.png" /></a>
