--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,10 @@
     <div class="container">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/restaurantes']">Restaurantes</a>
+          <a class="nav-link" [routerLink]="['/restaurantes']" routerLinkActive='active'>Restaurantes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/diversao']">Diversão</a>
+          <a class="nav-link" [routerLink]="['/diversao']" routerLinkActive='active'>Diversão</a>
         </li>
       </ul>
     </div>
