--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -7,34 +7,36 @@
 
   <hr />
 
+  <div *ngFor="let oferta of ofertas">
+    <div class="row">
+      <div class="col-md-4">
+        <img [src]="oferta.imagens[0].url" class="img-fluid" />
+      </div>
 
-  <div class="row">
-    <div class="col-md-4">
-      <img [src]="oferta.imagens[0].url"/>
+      <div class="col-md-8">
+        <div class="row">
+          <h4>{{ oferta.titulo }}</h4>
+        </div>
+
+        <div class="row">
+          <h5>{{ oferta.descricao_oferta }}</h5>
+        </div>
+
+        <div class="row">
+          <p>Anunciado por: <b>{{ oferta.anunciante }}</b></p>
+        </div>
+
+        <div class="row">
+          <p>{{ oferta.valor }}</p>
+        </div>
+
+        <div class="row">
+          <button class="btn btn-outline-success">Ver oferta</button>
+        </div>
+      </div>
     </div>
 
-    <div class="col-md-8">
-      <div class="row">
-        <h4>{{ oferta.titulo }}</h4>
-      </div>
-
-      <div class="row">
-        <h5>Rodízio de Mini-hambúrger com opção de entrada.</h5>
-      </div>
-
-      <div class="row">
-        <p>Anunciado por: <b>Original Burger</b></p>
-      </div>
-
-      <div class="row">
-        <p>R$ 29,90</p>
-      </div>
-
-      <div class="row">
-        <button class="btn btn-outline-success">Ver oferta</button>
-      </div>
-    </div>
+    <hr />
   </div>
-
 
 </div>
