Content update home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="secao">
     <h3 class="text-center">Destaques do dia!</h3>
-    <h5 class="text-center">Aproveite as super ofertas que separamos para você:</h5>
+    <h5 class="text-center">Aproveite as Super Osfertas que separamos para você:</h5>
   </div>
 
   <hr />
