--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,16 +8,16 @@
           </a>
         </div>
         <div class="col-md-6">
-          <input
-          type="text"
-          class="form-control"
-          placeholder="Pesquise por ofertas..."
-          #searchReference
-          (keyup)="search(searchReference.value)"
+          <input type="text"
+            class="form-control"
+            placeholder="Pesquise por ofertas..."
+            #termoDaPesquisa
+            (keyup)="pesquisa(termoDaPesquisa.value)"
           />
           <ul class="list-group" style="position: absolute">
-              <li class="list-group-item" *ngFor="let oferta of ofertas2">{{ oferta.titulo }}</li>
-            </ul>
+            <li class="list-group-item" *ngFor="let oferta of ofertas2">{{ oferta.titulo }}</li>
+          </ul>
+
         </div>
         <div class="col-md-2">
             <a a href="#"><img src="/assets/carrinho.png" /></a>
