--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
             #termoDaPesquisa
             (keyup)="pesquisa(termoDaPesquisa.value)"
           />
-          <ul class="list-group" style="position: absolute">
+          <ul class="list-group">
             <li class="list-group-item" *ngFor="let oferta of ofertas2">{{ oferta.titulo }}</li>
           </ul>
 
