Refactoring with pipe | async

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
             (keyup)="pesquisa(termoDaPesquisa.value)"
           />
           <ul class="list-group">
-            <li class="list-group-item" *ngFor="let oferta of ofertas2">{{ oferta.titulo | descricaoReduzida:15 | uppercase }}</li>
+            <li class="list-group-item" *ngFor="let oferta of ofertas | async">{{ oferta.titulo | descricaoReduzida:15 | uppercase }}</li>
           </ul>
 
         </div>
