Show error message

--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -80,7 +80,14 @@
           #inputEndereco
           (input)="atualizaEndereco(inputEndereco.value)"
           >
-          <div class="invalid-feedback">Endereço inválido</div>
+          <div *ngIf="enderecoEstadoPrimitivo == false">
+            <div *ngIf="enderecoValido; else msgEnderecoInvalido">
+                <small class="form-text text-success">Ok</small>
+            </div>
+            <ng-template #msgEnderecoInvalido>
+              <small class="form-text text-danger">Endereço inválido</small>
+            </ng-template>
+          </div>
         </div>
 
         <div class="form-group col-md-2">
@@ -95,7 +102,14 @@
           #inputNumero
           (input)="atualizaNumero(inputNumero.value)"
            >
-          <small class="form-text text-muted">Ok</small>
+          <div *ngIf="numeroEstadoPrimitivo == false">
+            <div *ngIf="numeroValido; else msgNumeroInvalido">
+              <small class="form-text text-success">Ok</small>
+            </div>
+            <ng-template #msgNumeroInvalido>
+              <small class="form-text text-danger">Número inválido</small>
+            </ng-template>
+          </div>
         </div>
 
         <div class="form-group col-md-4">
@@ -106,8 +120,13 @@
           autocomplete="off"
           [value]="complemento"
           #inputComplemento
-          (input)="atualizaComplemento(inputComplemento)"
+          (input)="atualizaComplemento(inputComplemento.value)"
           >
+          <div *ngIf="complementoEstadoPrimitivo == false">
+              <div *ngIf="complementoValido">
+                <small class="form-text text-success">Ok</small>
+              </div>
+          </div>
         </div>
 
       </div>
@@ -120,16 +139,23 @@
 
         <div class="form-group col-md-3">
           <select
-          class="form-control {{ formaPagamentoEstadoPrimitivo ? '' : (pagamentoValido ? 'is-valid' : 'is-invalid') }}"
+          class="form-control {{ formaPagamentoEstadoPrimitivo ? '' : (formaPagamentoValido ? 'is-valid' : 'is-invalid') }}"
           #selectFormaPagamento
           (change)="atualizaFormaPagamento(selectFormaPagamento.value)"
           >
-            <option>Selecione uma opção</option>
+            <option value="">Selecione uma opção</option>
             <option value="dinheiro" selected="{{ formaPagamento == 'dinheiro' ? 'selected' : ''}}">Dinheiro</option>
             <option value="debito" selected="{{ formaPagamento == 'debito' ? 'selected' : ''}}">Débito</option>
           </select>
 
-          <div class="invalid-feedback">Selecione uma forma de pagamento</div>
+          <div *ngIf="formaPagamentoEstadoPrimitivo == false">
+              <div *ngIf="formaPagamentoValido; else msgFormaPagamentoInvalido">
+                  <small class="form-text text-success">Ok</small>
+              </div>
+              <ng-template #msgFormaPagamentoInvalido>
+                <small class="form-text text-danger">Forma Pagamento inválido</small>
+              </ng-template>
+          </div>
         </div>
       </div>
 
