Start with FormsModule

--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="ordem-compra mt-5 mb-5">
+  <div class="ordem-compra mt-5 mb-5" *ngIf="idPedidoCompra === undefined">
     <form novalidate>
 
       <h5>Sua Compra</h5>
@@ -169,5 +169,8 @@
       Cofirmar compra
       </button>
     </form>
+  </div>
+  <div class="ordem-compra mt-5 mb-5" *ngIf="idPedidoCompra !== undefined">
+    <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
   </div>
 </div>
