--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="ordem-compra">
-    <form novalidate>
-    
+    <form novalidate #formulario='ngForm'>
+
       <h5>Sua Compra</h5>
       <hr />
 
@@ -29,7 +29,7 @@
           29.90
         </div>
       </div>
-      
+
       <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
           <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
@@ -54,7 +54,7 @@
           31.90
         </div>
       </div>
-      
+
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
@@ -62,42 +62,48 @@
       </div>
       <br />
 
-
+      <pre>{{ formulario.value | json }}</pre>
       <h5>Dados de entrega</h5>
       <hr />
 
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input 
-            type="text" 
-            class="form-control is-invalid" 
-            placeholder="Endereço" 
-            autocomplete="off" 
-            minlength="5" 
+          <input
+            type="text"
+            class="form-control is-invalid"
+            placeholder="Endereço"
+            autocomplete="off"
+            minlength="5"
             required
+            name='endereco'
+            ngModel
           >
           <small class="form-text text-danger">Endereço inválido</small>
         </div>
 
         <div class="form-group col-md-2">
-          <input 
-            type="text" 
-            class="form-control is-valid" 
-            placeholder="Número" 
-            autocomplete="off" 
+          <input
+            type="text"
+            class="form-control is-valid"
+            placeholder="Número"
+            autocomplete="off"
             minlength="1"
             required
+            name='numero'
+            ngModel
           >
           <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input 
-            type="text" 
-            class="form-control" 
-            placeholder="Complemento" 
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Complemento"
             autocomplete="off"
+            name='complemento'
+            ngModel
           >
         </div>
 
@@ -108,10 +114,12 @@
       <hr />
 
       <div class="form-row">
-          
+
         <div class="form-group col-md-3">
-          <select 
+          <select
             class="form-control is-invalid"
+            name='formaPagamento'
+            ngModel
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
@@ -122,8 +130,8 @@
       </div>
 
       <hr />
-      <button 
-        type="button" 
+      <button
+        type="button"
         class="btn btn-primary btn-lg"
       >Cofirmar compra</button>
     </form>
