--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="ordem-compra">
-    <form novalidate #formulario='ngForm'>
+    <form novalidate #formulario='ngForm' (ngSubmit)='confirmarCompra(formulario)'>
 
       <h5>Sua Compra</h5>
       <hr />
