--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -61,7 +61,8 @@
         </div>
       </div>
       <br />
-
+      <pre>{{ formulario.valid | json }}</pre>
+      <pre>{{ formulario.invalid | json }}</pre>
       <pre>{{ formulario.value | json }}</pre>
       <h5>Dados de entrega</h5>
       <hr />
@@ -74,9 +75,8 @@
             class="form-control is-invalid"
             placeholder="Endereço"
             autocomplete="off"
-            minlength="5"
-            required
             name='endereco'
+            required
             ngModel
           >
           <small class="form-text text-danger">Endereço inválido</small>
@@ -88,9 +88,10 @@
             class="form-control is-valid"
             placeholder="Número"
             autocomplete="off"
-            minlength="1"
-            required
             name='numero'
+            required
+            minlength="3"
+            maxlength="120"
             ngModel
           >
           <small class="form-text text-success">Ok</small>
@@ -103,6 +104,9 @@
             placeholder="Complemento"
             autocomplete="off"
             name='complemento'
+            required
+            minlength="3"
+            maxlength="120"
             ngModel
           >
         </div>
@@ -120,6 +124,7 @@
             class="form-control is-invalid"
             name='formaPagamento'
             ngModel
+            required
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
