--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -72,7 +72,7 @@
         <div class="form-group col-md-6">
           <input
             type="text"
-            class="form-control is-invalid"
+            class="form-control"
             placeholder="Endereço"
             autocomplete="off"
             name='endereco'
@@ -85,7 +85,7 @@
         <div class="form-group col-md-2">
           <input
             type="text"
-            class="form-control is-valid"
+            class="form-control"
             placeholder="Número"
             autocomplete="off"
             name='numero'
@@ -121,7 +121,7 @@
 
         <div class="form-group col-md-3">
           <select
-            class="form-control is-invalid"
+            class="form-control"
             name='formaPagamento'
             ngModel
             required
