--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -78,8 +78,10 @@
             name='endereco'
             required
             ngModel
+            #inputEndereco = 'ngModel'
           >
-          <small class="form-text text-danger">Endereço inválido</small>
+          <small *ngIf="inputEndereco.valid && inputEndereco.touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!inputEndereco.valid && inputEndereco.touched" class="form-text text-danger">Endereço inválido</small>
         </div>
 
         <div class="form-group col-md-2">
@@ -93,8 +95,10 @@
             minlength="3"
             maxlength="120"
             ngModel
+            #inputNumero = 'ngModel'
           >
-          <small class="form-text text-success">Ok</small>
+          <small *ngIf="inputNumero.valid && inputNumero.touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!inputNumero.valid && inputNumero.touched" class="form-text text-danger">Número inválido</small>
         </div>
 
         <div class="form-group col-md-4">
@@ -108,7 +112,10 @@
             minlength="3"
             maxlength="120"
             ngModel
+            #inputComplemento = 'ngModel'
           >
+          <small *ngIf="inputComplemento.valid && inputComplemento.touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!inputComplemento.valid && inputComplemento.touched" class="form-text text-danger">Complemento inválido</small>
         </div>
 
       </div>
@@ -125,12 +132,14 @@
             name='formaPagamento'
             ngModel
             required
+            #inputPagamento='ngModel'
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small class="form-text text-danger">Forma de pagamento inválida</small>
+          <small *ngIf="inputPagamento.valid && inputPagamento.touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!inputPagamento.valid && inputPagamento.touched" class="form-text text-danger">Forma de pagamento inválido</small>
         </div>
       </div>
 
