--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
-    <form novalidate #formulario='ngForm' (ngSubmit)='confirmarCompra()'>
-
+  <div class="ordem-compra">
+    <!--<form novalidate>-->
+    
       <h5>Sua Compra</h5>
       <hr />
 
@@ -29,7 +29,7 @@
           29.90
         </div>
       </div>
-
+      
       <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
           <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
@@ -54,65 +54,46 @@
           31.90
         </div>
       </div>
-
+      
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
         </div>
       </div>
       <br />
+
       <h5>Dados de entrega</h5>
       <hr />
 
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Endereço"
-            autocomplete="off"
-            name='endereco'
-            required
-            ngModel
-            #inputEndereco = 'ngModel'
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Endereço" 
+            autocomplete="off" 
           >
-          <small *ngIf="inputEndereco.valid && inputEndereco.touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!inputEndereco.valid && inputEndereco.touched" class="form-text text-danger">Endereço inválido</small>
+          <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-2">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Número"
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Número" 
             autocomplete="off"
-            name='numero'
-            required
-            minlength="3"
-            maxlength="120"
-            ngModel
-            #inputNumero = 'ngModel'
           >
-          <small *ngIf="inputNumero.valid && inputNumero.touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!inputNumero.valid && inputNumero.touched" class="form-text text-danger">Número inválido</small>
+          <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Complemento"
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Complemento" 
             autocomplete="off"
-            name='complemento'
-            required
-            minlength="3"
-            maxlength="120"
-            ngModel
-            #inputComplemento = 'ngModel'
           >
-          <small *ngIf="inputComplemento.valid && inputComplemento.touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!inputComplemento.valid && inputComplemento.touched" class="form-text text-danger">Complemento inválido</small>
         </div>
 
       </div>
@@ -122,33 +103,24 @@
       <hr />
 
       <div class="form-row">
-
+          
         <div class="form-group col-md-3">
-          <select
+          <select 
             class="form-control"
-            name='formaPagamento'
-            ngModel
-            required
-            #inputPagamento='ngModel'
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small *ngIf="inputPagamento.valid && inputPagamento.touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!inputPagamento.valid && inputPagamento.touched" class="form-text text-danger">Forma de pagamento inválido</small>
+          <small class="form-text text-success">Ok</small>
         </div>
       </div>
 
       <hr />
-      <button
-        type="button"
-        class="btn btn-primary btn-lg mb-5"
-        (click)="confirmarCompra()"
+      <button 
+        type="submit" 
+        class="btn btn-primary btn-lg"
       >Cofirmar compra</button>
-    </form>
-  </div>
-  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
-    <app-ordem-compra-sucesso [idPedidoCompra] = idPedidoCompra ></app-ordem-compra-sucesso>
+    <!--</form>-->
   </div>
 </div>
