--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="ordem-compra">
-    <form [formGroup]="formulario" novalidate>
+    <form [formGroup]="formulario" novalidate (ngSubmit)="confirmarCompra()">
 
       <h5>Sua Compra</h5>
       <hr />
@@ -123,7 +123,7 @@
       <hr />
       <button
         type="submit"
-        class="btn btn-primary btn-lg"
+        class="btn btn-primary btn-lg mb-5"
       >Cofirmar compra</button>
     </form>
   </div>
