--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -75,7 +75,8 @@
             autocomplete="off"
             formControlName = "endereco"
           >
-          <small class="form-text text-success">Ok</small>
+          <small *ngIf="formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-danger">Endereço Inválido</small>
         </div>
 
         <div class="form-group col-md-2">
@@ -86,7 +87,8 @@
             autocomplete="off"
             formControlName="numero"
           >
-          <small class="form-text text-success">Ok</small>
+          <small *ngIf="formulario.get('numero').valid && formulario.get('numero').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('numero').valid && formulario.get('numero').touched" class="form-text text-danger">Número Inválido</small>
         </div>
 
         <div class="form-group col-md-4">
@@ -97,6 +99,8 @@
             autocomplete="off"
             formControlName="complemento"
           >
+          <small *ngIf="formulario.get('complemento').valid && formulario.get('complemento').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('complemento').valid && formulario.get('complemento').touched" class="form-text text-danger">Complemento Inválido</small>
         </div>
 
       </div>
@@ -116,7 +120,8 @@
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small class="form-text text-success">Ok</small>
+          <small *ngIf="formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-danger">Forma Pa gamento Inválido</small>
         </div>
       </div>
 
@@ -124,6 +129,7 @@
       <button
         type="submit"
         class="btn btn-primary btn-lg mb-5"
+        [disabled]="!formulario.valid"
       >Cofirmar compra</button>
     </form>
   </div>
