--- a/src/app/oferta/oferta.component.html
+++ b/src/app/oferta/oferta.component.html
@@ -34,7 +34,11 @@
 
         <div class="row">
           <div class="col text-center">
-            <button type="button" class="btn btn-warning btn-lg">Adicionar ao carrinho</button>
+            <button
+            type="button"
+            class="btn btn-warning btn-lg"
+            (click)="adicionarItemCarrinho(oferta)"
+            >Adicionar ao carrinho</button>
           </div>
         </div>
 
@@ -51,7 +55,7 @@
           <a class="nav-link active" data-toggle="tab" [routerLink]="['como-usar']" role="tab" aria-expanded="true">Como usar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" [routerLink]="['onde-fica']" role="tab">Onde fica?</a>
+          <a class="nav-link" data-toggle="tab" [routerLink]="['onde-fica']"  role="tab">Onde fica?</a>
         </li>
       </ul>
       <div class="tab-content">
