Empty cart message

--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -4,7 +4,7 @@
 
       <h5>Sua Compra</h5>
       <hr />
-
+      <div *ngIf="carrinhoService.exibirItens().length; else carrinhoVazio ">
       <div *ngFor="let item of itensCarrinho"  class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
           <img [src]="item.img.url" class="img-fluid">
@@ -35,6 +35,12 @@
           <h4>Total do pedido: {{ carrinhoService.totalCarrinhoCompras() | currency: 'BRL': true }}</h4>
         </div>
       </div>
+    </div>
+    <ng-template #carrinhoVazio class="form-row d-flex justify-content-center" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+      <div>
+        Seu carrinho está vazio! Não perca tempo, aproveite as ofertas!
+      </div>
+    </ng-template>
       <br />
 
       <h5>Dados de entrega</h5>
@@ -96,7 +102,7 @@
             <option value="debito">Débito</option>
           </select>
           <small *ngIf="formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-danger">Forma Pa gamento Inválido</small>
+          <small *ngIf="!formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-danger">Forma Pagamento Inválido</small>
         </div>
       </div>
 
